--- a/bio.html
+++ b/bio.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biography</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Roboto', sans-serif;
+            font-family: "Space Grotesk", serif;
             margin: 0;
             padding: 0;
             display: flex;
@@ -56,16 +56,15 @@
 <body>
     <div class="container">
         <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
-        <h1>Your Name</h1>
-        <p>Mahir Yavuz is the Head of Engineering for Search, Recs, Ads at Etsy and former Co-founder and CTO of Topos.</p>
-        <p>With over 20 years of experience in data science, visualization, and AI/ML products, he has led multidisciplinary teams to solve data-centric challenges for clients like Nike, PwC, Google, Microsoft, and more.</p>
-        <p>Mahir’s work has been featured in international exhibitions and festivals, including the Ars Electronica Festival, SIGGRAPH, the Istanbul Biennial, and ISEA. He is a sought-after speaker, delivering talks and workshops at events such as the Visualized Festival, TEDx Istanbul and Vienna, and for organizations like NYC Government’s Center for Innovation through Data Intelligence.</p>
+        <h1>Mahir Yavuz</h1>
+        <p>Mahir is the Head of Engineering for Search, Recs, Ads at Etsy and former Co-founder and CTO of Topos.</p>
+        <p>With over 20 years of experience in product development, data science, AI/ML, he has led teams to build products for companies like Nike, PwC, Google, Microsoft, and more.</p>
+        <p>Mahir’s work has been featured in international exhibitions and festivals, including the Ars Electronica Festival, SIGGRAPH, the Istanbul Biennial, and ISEA. He is a sought-after speaker, delivering talks and workshops at events such as the Microsoft Build, Visualized, TEDx Istanbul and Vienna, and for organizations like NYC Government’s Center for Innovation through Data Intelligence.</p>
         <p>An experienced educator since 2003, Mahir has taught at institutions like the University of Pennsylvania, Pratt, and the University of Art and Design Linz, advising numerous student projects and guest lecturing at MIT, NYU, Columbia, and more.
         </p>
         <div class="social-links">
-            <a href="#">LinkedIn</a>
-            <a href="#">Twitter</a>
-            <a href="#">GitHub</a>
+            <a href="https://www.linkedin.com/in/mahiryavuz/">LinkedIn</a>
+            <a href="https://bsky.app/profile/mahiryavuz.bsky.social">Bluesky</a>
         </div>
     </div>
 </body>
